<resources>
    <!-- Dropdown gender -->
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>

    </string-array>
    <!-- Dropdown gender -->


    <!-- Dropdown gender -->
    <string name="app_name">IDNP Proyecto Grupo07</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_history">History</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_education">Education</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_setting">Settings</string>

    <string name="menu_setting_edit_profile">Edit profile</string>

    <string name="menu_setting_change_password">Change password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Login -->
    <string name="login_title">Sign up</string>

    <!-- Login -->

    <!-- History -->
    <string name="history_empty">Your history is empty!</string>
    <string name="history_empty_hint">Add plastics in the SCAN menu</string>

    <!-- History -->


    <!-- Database -->
    <string name="db_create">DATABASE CREATED</string>
    <string name="db_create_error">ERROR WHILE CREATING THE DATABASE</string>

    <!-- Database -->

</resources>