<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:showIn="navigation_view">

    <group android:id="@+id/grp1"  android:checkableBehavior="single"  >
        <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            app:actionLayout="@layout/menu_image"

            app:showAsAction="always"
            android:title="@string/menu_home"
            app:itemBackground="@color/black"/>
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_baseline_insert_chart_24"
            android:checkable="true"

            app:actionLayout="@layout/menu_image"
            app:showAsAction="always"
            android:title="@string/menu_overview"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:checkable="true"
            app:showAsAction="always"

            android:title="@string/menu_history"
            app:actionLayout="@layout/menu_image"
            />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_baseline_camera_alt_24"
            android:checkable="true"
            app:showAsAction="always"

            android:title="@string/menu_scan"
            app:actionLayout="@layout/menu_image"
            />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_baseline_book_24"
            android:checkable="true"
            app:showAsAction="always"

            android:title="@string/menu_education"
            app:actionLayout="@layout/menu_image"
            />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:checkable="true"
            app:showAsAction="always"

            android:title="@string/menu_signout"
            app:actionLayout="@layout/menu_image"
            />
    </group>
    <group  android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:checkable="true"
            app:showAsAction="always"

            android:title="@string/menu_setting"
            app:actionLayout="@layout/menu_image"
            />
    </group>
</menu>